tests/transpiler/x/zig/break_continue.zig
// Generated by Mochi Zig transpiler on 2025-07-20 06:41 +0000
const std = @import("std");

pub fn main() void {
    const numbers = [_]i64{1, 2, 3, 4, 5, 6, 7, 8, 9};
    for (numbers) |n| {
        if (n % 2 == 0) {
            continue;
        }
        if (n > 7) {
            break;
        }
        std.debug.print("{any} {any}\n", .{"odd number:", n});
    }
}
